# pytest-chic-report

./: .gitignore  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: deploy.yml  publish.yaml  upload.yaml
docs/: details.md
pcr/: args_cli.py  client_http.py  plugin.py
pytest_summary/: plugin.py
tests/: conftest.py  test_real_messenger.py  test_slack.py  test_summary.py
