[tool.poetry]
name = "pytest-chic-report"
version = "0.0.2"
description = "Simple pytest plugin for generating and sending report to messengers."
authors = ["Oleg Matskiv <alpaca00tuha@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Alpaca00/pytest-chic-report"
repository = "https://github.com/Alpaca00/pytest-chic-report"
keywords = ["keyword1", "keyword2"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = [
    ".github", "tests", "build", "dist",
    "pytest-chic-report.egg-info", ".gitignore",
]


[project.urls]
"GitHub" = "https://github.com/Alpaca00/pytest-chic-report"

[project.entry-points.pytest11]
pcr = "pcr.plugin"
