[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-chic-report"
version = "0.0.2"
description = "Simple pytest plugin for generating and sending report to messengers."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = ["Oleg Matskiv <alpaca00tuha@gmail.com>"]
homepage = "https://github.com/Alpaca00/pytest-chic-report"
repository = "https://github.com/Alpaca00/pytest-chic-report"
keywords = ["pytest", "report", "messenger", "teams", "slack"]

[project.entry-points.pytest11]
pcr = "pcr.plugin"

[tool.setuptools.packages.find]
exclude = [
    ".github", "tests", "build", "dist",
    "pytest-chic-report.egg-info", ".gitignore",
]

