[project]
name = "pytest-chic-report"
version = "0.0.2"
description = "Simple pytest plugin for generating and sending report to messengers."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Oleg Matskiv", email = "alpaca00tuha@gmail.com" }]
keywords = ["pytest", "report", "messenger", "teams", "slack"]

[project.dependencies]
python = "^3.8"
pytest = "^6.0"

[project.entry-points.pytest11]
pcr = "pcr.plugin"

[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = [
    ".github", "tests", "build", "dist",
    "pytest-chic-report.egg-info", ".gitignore",
]
